Customize personal information (partial)

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/Laikaiyong">@Laikaiyong</a></li>
+                    <li><a href="https://www.linkedin.com/in/lai-kai-yong/">@Kai Yong Lai (Vandyck)</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +30,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Asia Pacific University
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Software Engineering</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>GPA:3.96</li>
+                        <li>Year 2</li>
                     </ul>
                 </div>
             </section>
@@ -63,7 +62,7 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
+                    <li>Technical Documentation</li>
                     <li>Another skill</li>
                 </ul>
             </section>
